--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Spring Session + JDBC Demo</title>
+    <title>Spring Boot Demo App</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.js"></script>
@@ -13,11 +13,10 @@
 <body>
 <div id="main-content" class="container">
     <div>
-
         <form th:action="@{/logout}" method="get">
             <input type="submit" value="Logout"/>
         </form>
-
+    <br />
     </div>
     <div class="row">
         <div class="col-md-5">
